grafana/grafana-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: grafana
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana-deployment
  labels:
    app: grafana
  namespace: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels: 
        app: grafana
    spec:
      containers:
        - name: grafana-container
          image: grafana/grafana
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: storage
              mountPath: /var/lib/grafana
      volumes:
        - name: storage
          hostPath: 
            path: /apps/grafana/data
