grafana/grafana-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: grafana-ingress
  namespace: grafana
  annotations:
    haproxy.org/path-rewrite: /grafana/?(.*) /\1  
spec:
  ingressClassName: haproxy
  rules:
    - http:
        paths:
          - path: /grafana
            pathType: Prefix
            backend:
              service:
                name: grafana-service
                port:
                  number: 3000
      host: "raspberrypi.local"
